# smol_rust

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: lsif.yml
src/: lib.rs
