[package]
name = "smol_rust"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "This is just a test repo for me & rust analyzer to hang"

[lib]
name = "smol_rust"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.1"
